unpackaged/main/default/objects/Account/fields/Account_Number10__c.field-meta.xml
<CustomField>
    <fullName>Account_Number10__c</fullName>
    <label>Account Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>