unpackaged/main/default/objects/Account/fields/Account_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_2__c</fullName>
    <label>Account Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>