unpackaged/main/default/objects/Account/fields/Account_Status1__c.field-meta.xml
<CustomField>
    <fullName>Account_Status1__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active - Paying</fullName>
            </value>
            <value>
                <fullName>Active_Paid_Off</fullName>
                <label>Active - Paid Off</label>
            </value>
            <value>
                <fullName>Never Funded</fullName>
            </value>
            <value>
                <fullName>Out of business</fullName>
            </value>
            <value>
                <fullName>Sold Business</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>