unpackaged/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Never Closed</fullName>
            </value>
            <value>
                <fullName>Renewal Soon</fullName>
            </value>
            <value>
                <fullName>Paid off</fullName>
            </value>
            <value>
                <fullName>Renewal Ready</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>