unpackaged/main/default/objects/Account/fields/Age_of_Lead_days__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Lead_days__c</fullName>
    <description>calculating the # Days since received.</description>
    <inlineHelpText>calculating the # Days since received.</inlineHelpText>
    <label>Age of Lead (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>