unpackaged/main/default/objects/Account/fields/Alternate_Phone_1__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Phone_1__c</fullName>
    <label>Alternate Phone 1</label>
    <type>Phone</type>
</CustomField>