unpackaged/main/default/objects/Account/fields/Alternate_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Phone_2__c</fullName>
    <label>Alternate Phone 2</label>
    <type>Phone</type>
</CustomField>