unpackaged/main/default/objects/Account/fields/Amex_1__c.field-meta.xml
<CustomField>
    <fullName>Amex_1__c</fullName>
    <label>Amex Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>