unpackaged/main/default/objects/Account/fields/Amex__c.field-meta.xml
<CustomField>
    <fullName>Amex__c</fullName>
    <description>Amex Volume Based on Sales</description>
    <label>Amex Volume Based on Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>