unpackaged/main/default/objects/Account/fields/Are_You_Currently_Accepting_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Are_You_Currently_Accepting_Transactions__c</fullName>
    <label>Are You Currently Accepting Transactions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>