unpackaged/main/default/objects/Account/fields/Average_Business_to_Business__c.field-meta.xml
<CustomField>
    <fullName>Average_Business_to_Business__c</fullName>
    <label>Average Business-to-Business:</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>