unpackaged/main/default/objects/Account/fields/Average_Days_Negative__c.field-meta.xml
<CustomField>
    <fullName>Average_Days_Negative__c</fullName>
    <formula>( Days_Negative_40__c  +  Days_Negative_41__c  +  Days_Negative_42__c  + Days_Negative_43__c + Days_Negative_44__c + Days_Negative_45__c + Days_Negative_46__c + Days_Negative_47__c  + Days_Negative_48__c + Days_Negative_49__c+
Days_Negative_50__c+Days_Negative_51__c) /

if(
if(Total_Deposits_40__c =0,0,1)+if(Total_Deposits_41__c =0,0,1)+if(Total_Deposits_42__c =0,0,1)+
if(Total_Deposits_43__c =0,0,1)+if(Total_Deposits_44__c =0,0,1)+if(Total_Deposits_45__c =0,0,1)+
if(Total_Deposits_46__c =0,0,1)+if(Total_Deposits_47__c =0,0,1)+if(Total_Deposits_48__c =0,0,1)+
if(Total_Deposits_49__c =0,0,1)+if(Total_Deposits_50__c =0,0,1)+if(Total_Deposits_51__c =0,0,1)=0,1,if
(Total_Deposits_40__c =0,0,1)+if(Total_Deposits_41__c =0,0,1)+if(Total_Deposits_42__c =0,0,1)+
if(Total_Deposits_43__c =0,0,1)+if(Total_Deposits_44__c =0,0,1)+if(Total_Deposits_45__c =0,0,1)+
if(Total_Deposits_46__c =0,0,1)+if(Total_Deposits_47__c =0,0,1)+if(Total_Deposits_48__c =0,0,1)+
if(Total_Deposits_49__c =0,0,1)+if(Total_Deposits_50__c =0,0,1)+if(Total_Deposits_51__c =0,0,1) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Days Negative</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>