unpackaged/main/default/objects/Account/fields/Average_Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Average_Monthly_Volume__c</fullName>
    <label>Average Monthly Volume</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>