unpackaged/main/default/objects/Account/fields/Average_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Average_Ticket__c</fullName>
    <label>Average Ticket</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>