unpackaged/main/default/objects/Account/fields/Avg_3_month_formula__c.field-meta.xml
<CustomField>
    <fullName>Avg_3_month_formula__c</fullName>
    <formula>( Three_Month_Bank_3__c + Three_Month_Bank_4__c + Three_Month_Bank_2__c )/

If(
If(Three_Month_Bank_3__c=0,0,1)+If(Three_Month_Bank_4__c=0,0,1)+If(Three_Month_Bank_2__c=0,0,1)=0,1,
if(Three_Month_Bank_3__c=0,0,1)+If(Three_Month_Bank_4__c=0,0,1)+If(Three_Month_Bank_2__c=0,0,1 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg 3 month formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>