unpackaged/main/default/objects/Account/fields/AVG_Bank_Deposits_All_Months__c.field-meta.xml
<CustomField>
    <fullName>AVG_Bank_Deposits_All_Months__c</fullName>
    <label>AVG Bank Deposits All Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>