unpackaged/main/default/objects/Account/fields/AVG_Bank_Deposits_last_3_months__c.field-meta.xml
<CustomField>
    <fullName>AVG_Bank_Deposits_last_3_months__c</fullName>
    <label>AVG Bank Deposits last 3 months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>