unpackaged/main/default/objects/Account/fields/AVG_CC_Sales_All_Months__c.field-meta.xml
<CustomField>
    <fullName>AVG_CC_Sales_All_Months__c</fullName>
    <label>AVG CC Sales All Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>