unpackaged/main/default/objects/Account/fields/Avg_Total_formula__c.field-meta.xml
<CustomField>
    <fullName>Avg_Total_formula__c</fullName>
    <formula>(Total_Deposits_1__c +  Total_Deposits_2__c  +  Total_Deposits_3__c  + Total_Deposits_4__c + Total_Deposits_5__c + Total_Deposits_6__c + Total_Deposits_7__c + Total_Deposits_8__c  + Total_Deposits_9__c + Total_Deposits_10__c+
Total_Deposits_11__c+Total_Deposits_12__c) /

if(
if(Total_Deposits_1__c =0,0,1)+if(Total_Deposits_2__c =0,0,1)+if(Total_Deposits_3__c =0,0,1)+
if(Total_Deposits_4__c =0,0,1)+if(Total_Deposits_5__c =0,0,1)+if(Total_Deposits_6__c =0,0,1)+
if(Total_Deposits_7__c =0,0,1)+if(Total_Deposits_8__c =0,0,1)+if(Total_Deposits_9__c =0,0,1)+
if(Total_Deposits_10__c =0,0,1)+if(Total_Deposits_11__c =0,0,1)+if(Total_Deposits_12__c =0,0,1)=0,1,if
(Total_Deposits_1__c =0,0,1)+if(Total_Deposits_2__c =0,0,1)+if(Total_Deposits_3__c =0,0,1)+
if(Total_Deposits_4__c =0,0,1)+if(Total_Deposits_5__c =0,0,1)+if(Total_Deposits_6__c =0,0,1)+
if(Total_Deposits_7__c =0,0,1)+if(Total_Deposits_8__c =0,0,1)+if(Total_Deposits_9__c =0,0,1)+
if(Total_Deposits_10__c =0,0,1)+if(Total_Deposits_11__c =0,0,1)+if(Total_Deposits_12__c =0,0,1) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Total formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>