unpackaged/main/default/objects/Account/fields/Balance_Owed__c.field-meta.xml
<CustomField>
    <fullName>Balance_Owed__c</fullName>
    <label>Approximate Balance</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>