unpackaged/main/default/objects/Account/fields/Bank_Branch__c.field-meta.xml
<CustomField>
    <fullName>Bank_Branch__c</fullName>
    <label>Bank Branch</label>
    <length>128</length>
    <type>Text</type>
</CustomField>