unpackaged/main/default/objects/Account/fields/Bank_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contact_Name__c</fullName>
    <label>Bank Contact Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>