unpackaged/main/default/objects/Account/fields/Bank_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contact_Number__c</fullName>
    <description>Bank Contact Number</description>
    <label>Bank Contact Number</label>
    <type>Phone</type>
</CustomField>