unpackaged/main/default/objects/Account/fields/Bank_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contact_Phone__c</fullName>
    <label>Bank Contact Phone</label>
    <type>Phone</type>
</CustomField>