unpackaged/main/default/objects/Account/fields/Bank_Name_Business__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name_Business__c</fullName>
    <label>Bank Name (Business)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>