unpackaged/main/default/objects/Account/fields/Batch_Fee__c.field-meta.xml
<CustomField>
    <fullName>Batch_Fee__c</fullName>
    <label>Batch Fee</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>