unpackaged/main/default/objects/Account/fields/Beginning_Balance__c.field-meta.xml
<CustomField>
    <fullName>Beginning_Balance__c</fullName>
    <description>Beginning Balance</description>
    <label>Beginning Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>