unpackaged/main/default/objects/Account/fields/Best_time_to_Call__c.field-meta.xml
<CustomField>
    <fullName>Best_time_to_Call__c</fullName>
    <inlineHelpText>Best time to contact with merchant.</inlineHelpText>
    <label>Best time to Call</label>
    <length>40</length>
    <type>Text</type>
</CustomField>