unpackaged/main/default/objects/Account/fields/Card_Not_Present_mail_phone__c.field-meta.xml
<CustomField>
    <fullName>Card_Not_Present_mail_phone__c</fullName>
    <label>Card Not Present (mail/phone)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>