unpackaged/main/default/objects/Account/fields/Card_Present_Keyed_Imprint__c.field-meta.xml
<CustomField>
    <fullName>Card_Present_Keyed_Imprint__c</fullName>
    <label>Card Present Keyed/Imprint</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>