unpackaged/main/default/objects/Account/fields/Character__c.field-meta.xml
<CustomField>
    <fullName>Character__c</fullName>
    <description>Type of guy this is</description>
    <label>Character</label>
    <length>30</length>
    <type>Text</type>
</CustomField>