unpackaged/main/default/objects/Account/fields/City_State_Zip_Code_2__c.field-meta.xml
<CustomField>
    <fullName>City_State_Zip_Code_2__c</fullName>
    <label>City(2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>