unpackaged/main/default/objects/Account/fields/Credit_Score_Cashio__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_Cashio__c</fullName>
    <label>Credit Score (Cashio)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>