unpackaged/main/default/objects/Account/fields/Current_Credit_Card_Processor__c.field-meta.xml
<CustomField>
    <fullName>Current_Credit_Card_Processor__c</fullName>
    <label>Current Credit Card Procerssor</label>
    <length>40</length>
    <type>Text</type>
</CustomField>