unpackaged/main/default/objects/Account/fields/Current_Daily_Payment__c.field-meta.xml
<CustomField>
    <fullName>Current_Daily_Payment__c</fullName>
    <description>Whats he paying daily</description>
    <label>Current Daily Payment</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>