unpackaged/main/default/objects/Account/fields/Current_Effective_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Effective_Rate__c</fullName>
    <label>Current Effective Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>