unpackaged/main/default/objects/Account/fields/Current_Holdback__c.field-meta.xml
<CustomField>
    <fullName>Current_Holdback__c</fullName>
    <description>Whats the current holdback for his balance</description>
    <label>Current Holdback</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>