unpackaged/main/default/objects/Account/fields/Current_Processor_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Processor_s_Name__c</fullName>
    <label>Current Processor’s Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>