unpackaged/main/default/objects/Account/fields/Currently_Accept_EBT__c.field-meta.xml
<CustomField>
    <fullName>Currently_Accept_EBT__c</fullName>
    <label>Currently Accept EBT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>