unpackaged/main/default/objects/Account/fields/Date_Amex_2__c.field-meta.xml
<CustomField>
    <fullName>Date_Amex_2__c</fullName>
    <label>Date</label>
    <length>30</length>
    <type>Text</type>
</CustomField>