unpackaged/main/default/objects/Account/fields/Date_Business_Established__c.field-meta.xml
<CustomField>
    <fullName>Date_Business_Established__c</fullName>
    <label>Business Start Date Under Current Owner</label>
    <type>Date</type>
</CustomField>