unpackaged/main/default/objects/Account/fields/Date_MS_10__c.field-meta.xml
<CustomField>
    <fullName>Date_MS_10__c</fullName>
    <description>Date Merchant Statement 10</description>
    <label>Date</label>
    <length>30</length>
    <type>Text</type>
</CustomField>