unpackaged/main/default/objects/Account/fields/Date_MS_11__c.field-meta.xml
<CustomField>
    <fullName>Date_MS_11__c</fullName>
    <description>Date Merchant Statement 11</description>
    <label>Date</label>
    <length>30</length>
    <type>Text</type>
</CustomField>