unpackaged/main/default/objects/Account/fields/Date_of_Birth_2__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_2__c</fullName>
    <label>Date of Birth(2)</label>
    <type>Date</type>
</CustomField>