unpackaged/main/default/objects/Account/fields/Date_of_Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Current_Balance__c</fullName>
    <description>Input here the day we get the balance</description>
    <label>Date of Current Balance</label>
    <type>Date</type>
</CustomField>