unpackaged/main/default/objects/Account/fields/Days_Negative10__c.field-meta.xml
<CustomField>
    <fullName>Days_Negative10__c</fullName>
    <label>Days Negative</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>