unpackaged/main/default/objects/Account/fields/DBA_Address__c.field-meta.xml
<CustomField>
    <fullName>DBA_Address__c</fullName>
    <label>DBA Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>