unpackaged/main/default/objects/Account/fields/DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>DBA_Name__c</fullName>
    <description>Merchants doing business as name.</description>
    <label>DBA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>