unpackaged/main/default/objects/Account/fields/DBA_Zip__c.field-meta.xml
<CustomField>
    <fullName>DBA_Zip__c</fullName>
    <label>DBA Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>