unpackaged/main/default/objects/Account/fields/DDA_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>DDA_Account_Number__c</fullName>
    <label>DDA Account Number:</label>
    <length>30</length>
    <type>Text</type>
</CustomField>