unpackaged/main/default/objects/Account/fields/Debit_Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Debit_Discount_Rate__c</fullName>
    <label>Debit Discount Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>