unpackaged/main/default/objects/Account/fields/Debit_Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Debit_Transaction_Fee__c</fullName>
    <label>Debit Transaction Fee</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>