unpackaged/main/default/objects/Account/fields/Default_or_Out_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Default_or_Out_of_Business__c</fullName>
    <description>Checks to see if an account has any Opportunities that have defaulted or our of business</description>
    <label>Default or Out of Business</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Default, Out of Business, Farmed Out</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>