unpackaged/main/default/objects/Account/fields/Do_you_accept_Gift_Cards__c.field-meta.xml
<CustomField>
    <fullName>Do_you_accept_Gift_Cards__c</fullName>
    <label>Do you accept Gift Cards</label>
    <length>10</length>
    <type>Text</type>
</CustomField>