unpackaged/main/default/objects/Account/fields/Do_you_have_Loan_MCA__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_Loan_MCA__c</fullName>
    <label>Currently any open loan or MCA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>