unpackaged/main/default/objects/Account/fields/Do_You_Operate_a_Seasonal_Business__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Operate_a_Seasonal_Business__c</fullName>
    <label>Do You Operate a Seasonal Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>