unpackaged/main/default/objects/Account/fields/DOB_2__c.field-meta.xml
<CustomField>
    <fullName>DOB_2__c</fullName>
    <label>DOB 2</label>
    <type>Date</type>
</CustomField>