unpackaged/main/default/objects/Account/fields/Does_Merchant_Need_Tele_Training__c.field-meta.xml
<CustomField>
    <fullName>Does_Merchant_Need_Tele_Training__c</fullName>
    <label>Does Merchant Need Tele Training</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>