unpackaged/main/default/objects/Account/fields/Does_The_Merchant_Need_to_Dial_9_for_an__c.field-meta.xml
<CustomField>
    <fullName>Does_The_Merchant_Need_to_Dial_9_for_an__c</fullName>
    <label>Does The Merchant Need to Dial 9</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>