unpackaged/main/default/objects/Account/fields/eFax__c.field-meta.xml
<CustomField>
    <fullName>eFax__c</fullName>
    <label>eFax</label>
    <type>Email</type>
</CustomField>