unpackaged/main/default/objects/Account/fields/Ending_Balance__c.field-meta.xml
<CustomField>
    <fullName>Ending_Balance__c</fullName>
    <description>Ending Balance</description>
    <label>Ending Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>