unpackaged/main/default/objects/Account/fields/Enter_Month_10__c.field-meta.xml
<CustomField>
    <fullName>Enter_Month_10__c</fullName>
    <label>Enter Month</label>
    <type>Date</type>
</CustomField>