unpackaged/main/default/objects/Account/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Reprogram</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>